--- a/AutoHook/AutoHook.csproj
+++ b/AutoHook/AutoHook.csproj
@@ -2,13 +2,15 @@
 <Project Sdk="Dalamud.NET.Sdk/13.0.0">
     <PropertyGroup>
         <Authors>Det</Authors>
-        <Version>5.0.0.4</Version>
+        <Version>5.0.0.6</Version>
         <LangVersion>preview</LangVersion>
 		<GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
     </PropertyGroup>
 
     <ItemGroup>
-		<EmbeddedResource Include="Data\FishData\*" />
+        <None Include="Data\FishData\*">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
 		<EmbeddedResource Include="Assets\Fishy.png" />
 		<EmbeddedResource Include="Assets\Fishy_g.png" />
     </ItemGroup>
@@ -18,7 +20,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="12.0.0" />
         <PackageReference Include="ECommons" Version="3.0.1.3" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
         <ProjectReference Include="..\PunishLib\PunishLib\PunishLib.csproj" />
