Change workflow schedule to monthly
The update-bite-timers workflow now runs on the first day of each month instead of every Sunday.

--- a/.github/workflows/update-bite-timers.yml
+++ b/.github/workflows/update-bite-timers.yml
@@ -2,7 +2,7 @@ name: Update Bite Timers
 
 on:
   schedule:
-    - cron: '0 0 * * SUN'  # Runs every Sunday
+    - cron: '0 0 1 * *'  # Runs on the first day of each month
   workflow_dispatch:
   
 jobs:
