--- a/AutoHook/AutoHook.csproj
+++ b/AutoHook/AutoHook.csproj
@@ -20,8 +20,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ECommons" Version="3.0.1.10" />
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
+        <PackageReference Include="ECommons" Version="3.0.1.26" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
         <ProjectReference Include="..\PunishLib\PunishLib\PunishLib.csproj" />
     </ItemGroup>
 
@@ -38,5 +38,9 @@
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>UIStrings.Designer.cs</LastGenOutput>
         </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
     </ItemGroup>
 </Project>
